--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Alireza Yazdi <alireza@anyonsys.com>", "Paul Le Roux <pleroux@anyons
 version = "0.1.0"
 
 [deps]
+Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
